MVP versão 01 Funcional

--- a/templates/algoritmos.html
+++ b/templates/algoritmos.html
@@ -41,7 +41,7 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-4">Profile</h3>
+                    <h3 class="text-dark mb-4">Algoritmo</h3>
                     <div class="row mb-3">
                         <div class="col-lg-4">
                             <div class="card mb-3">
@@ -112,7 +112,7 @@
                                 <div class="col">
                                     <div class="card shadow mb-3">
                                         <div class="card-header py-3">
-                                            <p class="text-primary m-0 fw-bold">User Settings</p>
+                                            <p class="text-primary m-0 fw-bold">Descrição do Algoritmo</p>
                                         </div>
                                         <div class="card-body">
                                             <form>
@@ -181,13 +181,15 @@
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
-                    <div class="text-center my-auto copyright"><span>Copyright © Brand 2021</span></div>
+                    <div class="text-center my-auto copyright"><span>Copyright © FakeNewsBR&nbsp;2021</span></div>
                 </div>
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bs-init-1.js"></script>
     <script src="/static/js/bs-init.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/theme.js"></script>
 </body>
 
