--- a/templates/DataBase.html
+++ b/templates/DataBase.html
@@ -188,13 +188,15 @@
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
-                    <div class="text-center my-auto copyright"><span>Copyright © Brand 2021</span></div>
+                    <div class="text-center my-auto copyright"><span>Copyright © FakeNewsBR&nbsp;2021</span></div>
                 </div>
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/bs-init-1.js"></script>
     <script src="/static/js/bs-init.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/theme.js"></script>
 </body>
 
