--- a/templates/DataBase.html
+++ b/templates/DataBase.html
@@ -22,7 +22,7 @@
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Detector</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="algoritmos.html"><i class="fas fa-user"></i><span>Algoritmos</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="modelos.html"><i class="fas fa-user"></i><span>Modelos</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="Ranking.html"><i class="fas fa-table"></i><span>Ranking</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="DataBase.html"><i class="far fa-user-circle"></i><span>DataBase</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"></a></li>
@@ -193,7 +193,7 @@
             </footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/bs-init-1.js"></script>
     <script src="/static/js/bs-init.js"></script>
     <script src="/static/js/jquery.min.js"></script>
